--- a/style.css
+++ b/style.css
@@ -35,19 +35,16 @@
     border-bottom: solid 0.1rem black;
     background-color: #292e49d2;
   }
-  
   .navbar-nav {
     margin: 0 auto;
     text-align: center;
   }
-  
   .nav-link:hover {
     background-color: #bbd2c5cc;
     color: #292e49 !important;
     font-weight: bolder;
     text-shadow: none;
   }
-  
   .navbar a {
     padding: 0.5rem;
     font-size: 1.3rem;
@@ -55,7 +52,6 @@
     text-transform: uppercase;
     letter-spacing: 0.12rem;
   }
-  
   /******************* #header *******************/
   #header {
     padding: 5rem 0 9rem 0;
@@ -64,40 +60,32 @@
       url(/assets/chemin.jpg);
     clip-path: polygon(0 0, 100% 0%, 100% 69%, 0 100%);
   }
-  
   .header_photo {
     text-align: center;
     opacity: 0.9;
   }
-  
   .rounded-circle {
     width: 30rem;
   }
-  
   section .heading {
     text-align: center;
     padding: 4rem;
   }
-  
   .heading {
     margin-bottom: 1rem;
   }
-  
   .heading h1 {
     text-transform: uppercase;
   }
-  
   .heading h1,
   .heading h3 {
     color: #fff;
     text-shadow: 0.4rem -0.2rem 0.5rem rgba(0, 0, 0, 0.637);
   }
-  
   .CV {
     padding-left: 70%;
     margin-bottom: 2rem;
   }
-  
   /************* COMPETENCES *************/
   #gradient {
     background-image: linear-gradient(340deg, #bbd2c5b6, #5369764f, #292e49be);
@@ -124,7 +112,6 @@
     height: 0.2rem;
     width: 50%;
   }
-  
   .line::after,
   #line-2::after,
   #line-3::after,
@@ -137,7 +124,6 @@
     height: 0.2rem;
     width: 50%;
   }
-  
   .line::after {
     transform: translateX(0) scaleX(0);
     animation-duration: 4s;
@@ -145,7 +131,6 @@
     animation-fill-mode: forwards;
     animation-name: line;
   }
-  
   @keyframes line {
     0% {
       transform: scaleX(0);
@@ -155,12 +140,10 @@
       transform: scaleX(1);
     }
   }
-  
   /************* EXPERIENCES **************/
   #experience {
     background: linear-gradient(340deg, #bbd2c5b2, #bbd2c5bb, #5369764f);
   }
-  
   #line-2::after {
     transform: translateX(0) scaleX(0);
     animation-delay: 3s;
@@ -169,25 +152,21 @@
     animation-fill-mode: forwards;
     animation-name: lineExp;
   }
-  
   @keyframes lineExp {
     100% {
       transform: translateX(0) scaleX(1);
       /*transform-origin: to right;*/
     }
   }
-  
   ul {
     list-style-type: none;
   }
-  
   .timeline {
     position: relative;
     padding: 3rem 1rem;
     margin-left: 2rem;
     margin-right: 2rem;
   }
-  
   .timeline:before {
     content: " ";
     position: absolute;
@@ -198,22 +177,18 @@
     margin-left: -0.25rem;
     background-color: #292e49be;
   }
-  
   .timeline > li {
     margin-bottom: 2rem;
     position: relative;
   }
-  
   .timeline > li:after {
     clear: both;
   }
-  
   .timeline > li:before,
   .timeline > li:after {
     content: " ";
     display: table;
   }
-  
   .timeline li .timeline-badge {
     position: relative;
     width: 5rem;
@@ -228,17 +203,14 @@
     text-shadow: 0.4rem -0.2rem 0.5rem rgba(0, 0, 0, 0.637);
     border-radius: 50%;
   }
-  
   .timeline-panel-container {
     width: 50%;
     float: left;
   }
-  
   .timeline-panel-container-inverted {
     width: 50%;
     float: right;
   }
-  
   .timeline-panel {
     position: relative;
     width: 90%;
@@ -250,12 +222,10 @@
     background: #fff;
     box-shadow: 0 0.1rem 0.6rem #292e4986;
   }
-  
   .timeline-panel-container-inverted .timeline-panel {
     float: left;
     margin-left: 4rem;
   }
-  
   .timeline-panel::after {
     content: " ";
     display: inline-block;
@@ -267,34 +237,28 @@
     border-right: 0 solid #fff;
     border-bottom: 1.4rem solid transparent;
   }
-  
   .timeline-panel-container-inverted .timeline-panel:after {
     left: -1.4rem;
     right: auto;
     border-left-width: 0;
     border-right-width: 1.4rem;
   }
-  
   .timeline-header h3 {
     display: inline-block;
     position: relative;
     font-size: 1.3rem;
   }
-  
   .timeline-header h4 {
     color: #292e49be;
   }
-  
   /*********** EDUCATION ************/
   #gradient3 {
     background: linear-gradient(360deg, #53697694, #bbd2c5bb, #bbd2c5b2);
     padding: 1rem;
   }
-  
   .container-xl {
     margin: 0;
   }
-  
   #line-3::after {
     transform: translateX(0) scaleX(0);
     animation-duration: 3s;
@@ -303,7 +267,6 @@
     animation-fill-mode: forwards;
     animation-name: lineEducation;
   }
-  
   @keyframes lineEducation {
     0% {
       transform: scaleX(0);
@@ -313,62 +276,28 @@
       transform: scaleX(1);
     }
   }
-  
-  .education-block {
-    width: 80%;
-    margin: 0 auto;
-    margin-bottom: 2rem;
-    text-align: center;
-    background: #53697634;
-    border-radius: 0.5rem;
-    border: 0.1rem solid #292e49be;
+  /****** CAROUSEL EDUCATION ******/
+  .carouselEducation{
+    height: 650px;
   }
-  
-  .education-block h5 {
-    padding-top: 1rem;
-    color: #536976e7;
+  .carouselEducation .carousel-inner {
+    width: 100%;
+    height: 100%;
   }
-  
-  .bi-award-fill {
-    text-align: center;
-    font-size: 1.7rem;
+  .carouselEducation .carousel-inner .carousel-item{
+   height: auto;
   }
-  
-  .education-block h3 {
-    color: #292e49;
-    text-shadow: 0.2rem -0.1rem 0.3rem rgba(255, 255, 255, 0.637);
+  .carouselEducation .carousel-inner .carousel-item img{
+   width: 600px!important;
+   height: auto;
   }
-  
-  .education-block h4 {
-    font-weight: normal;
-    margin-bottom: 1.5rem;
+  .carouselEducation .carousel-inner .carousel-item .carousel-caption{
+    color: #000;
+    bottom: -160px;
   }
-  
-  .education-block p {
-    font-style: italic;
+  .carouselEducation .carousel-control-prev,
+  .carouselEducation .carousel-control-next{
   }
-  
-  .line-education {
-    height: 0.1rem;
-    width: 20%;
-    background: #292e49be;
-    margin: 0.5rem auto;
-  }
-  
-  .photo,
-  .photo-left {
-    position: relative;
-    width: 12rem;
-    transition: 0.4s ease;
-    margin-left: 25%;
-    cursor: pointer;
-  }
-  
-  .photo:hover,
-  .photo-left:hover {
-    transform: translateX(10%) translateY(-40%) scale(3, 3);
-  }
-  
   /*********** PORTFOLIO ************/
   #gradient-4 {
     background-image: linear-gradient(160deg, #5369764f, #292e49e7);
@@ -412,14 +341,6 @@
     padding-bottom: 5rem;
   }
   
-  .carousel-item {
-    text-align: center;
-    height: 15rem;
-  }
-  
-  .carousel-item h3 {
-    color: #536976e7;
-  }
   
   /************ FORMULAIRE ***********/
   .divider {
