--- a/style.css
+++ b/style.css
@@ -89,9 +89,8 @@
   /************* COMPETENCES *************/
   #gradient {
     background-image: linear-gradient(340deg, #bbd2c5b6, #5369764f, #292e49be);
-    height: 30rem;
     width: 100%;
-    padding-top: 3rem;
+    padding-bottom: 3rem;
   }
   .progress {
     margin: 1rem;
@@ -297,11 +296,15 @@
   }
   .carouselEducation .carousel-control-prev,
   .carouselEducation .carousel-control-next{
+    position: absolute;
+    top: 400px;
+    height: 60px;
   }
   /*********** PORTFOLIO ************/
   #gradient-4 {
     background-image: linear-gradient(160deg, #5369764f, #292e49e7);
     padding-top: 2rem;
+    padding-bottom: 2rem;
   }
   
   #line-4::after {
@@ -322,7 +325,6 @@
       transform: scaleX(1);
     }
   }
-  
   .imagePortfolio img {
     width: 20rem;
     height: 15rem;
@@ -335,13 +337,11 @@
     -webkit-filter: none;
   }
   
-  /*********** CAROUSSEL ************/
+  /*********** CAROUSSEL RECOMMANDATIONS ************/
   .Recomandations {
     color: #292e49;
     padding-bottom: 5rem;
   }
-  
-  
   /************ FORMULAIRE ***********/
   .divider {
     width: 15rem;
@@ -350,17 +350,14 @@
     margin: 0 auto 2rem;
     margin-top: 2rem;
   }
-  
   .container {
     padding-top: 2rem;
   }
-  
   #formulaire-de-contact {
     text-transform: uppercase;
     text-shadow: 0.1rem -0.2rem 0.3rem rgba(27, 27, 27, 0.486);
     text-align: center;
   }
-  
   #contact-form {
     font-size: 1.3rem;
     background: #fff;
@@ -368,29 +365,24 @@
     border-radius: 1rem;
     margin-bottom: 2rem;
   }
-  
   .form-control {
     height: 3.5rem;
     font-size: 1.4rem;
   }
-  
   textarea[type="text"] {
     resize: none;
     height: 10rem;
   }
-  
   .comment {
     font-style: italic;
     font-size: 1.1rem;
     height: 2.5rem;
     color: rgba(137, 43, 226, 0.76);
   }
-  
   #contact-form input[type="submit"] {
     margin: 4rem auto 0rem;
     display: block;
   }
-  
   .button1 {
     border: solid 0.1rem;
     background: rgba(223, 163, 0, 0.986);
@@ -402,45 +394,82 @@
     border-radius: 0.5rem;
     transition: all 0.3s ease-in 0s;
   }
-  
   .button1:hover {
     background: rgb(224, 127, 0);
     border-color: lightgray;
     color: #292e49;
   }
-  
   .thank-you {
     text-align: center;
     margin-top: 1.5rem;
     font-weight: bolder;
     font-size: 1.6rem;
   }
-  
   /********** FOOTER ***********/
   footer {
     background-color: #292e49e0;
     padding: 2rem 0 4rem;
     text-align: center;
   }
-  
   footer a {
     cursor: pointer;
     height: 1rem;
     width: 1rem;
   }
-  
   footer h5 {
     color: #536976e7;
   }
-  
   footer h5 i {
     font-size: 1.5rem;
   }
-  
   footer a .fas {
     color: white;
   }
   /***************** RESPONSIVE ******************/
+  @media screen and (max-width: 912px){
+    #gradient-4 .container .row .imagePortfolio img{
+      width: 22rem!important;
+    height: 10rem;
+    }
+  }
+  @media screen and (max-width: 768px){
+    /**** CAROUSEL RECOMMANDATIONS ****/
+  .carouselEducation{
+    height: 540px;
+  }
+  .carouselEducation .carousel-inner .carousel-item{
+    height: auto;
+   }
+  .carouselEducation .carousel-inner .carousel-item .carousel-caption{
+    color: #000!important;
+    display: flex!important;
+    flex-direction: column!important;
+    align-items: center!important;
+    justify-content: center!important;
+    position: relative;
+    width: 70%;
+    bottom: 10px;
+  }
+  .carouselEducation .carousel-control-prev,
+  .carouselEducation .carousel-control-next{
+    position: absolute;
+    top: 300px;
+    height: 60px;
+  }
+  .carouselEducation .carousel-inner .carousel-item img{
+    width: 400px!important;
+    height: auto;
+  }
+  /**** PORTFOLIO ****/
+    #gradient-4 .container .row .imagePortfolio img{
+      display: flex;
+      width: 20rem!important;
+    height: 15rem;
+    }
+  }
+  @media screen and (max-width: 540px){
+   
+} 
   @media screen and (max-width: 450px) {
     .CV {
       padding-left: 60%;
