--- a/style.css
+++ b/style.css
@@ -86,6 +86,13 @@
     padding-left: 70%;
     margin-bottom: 2rem;
   }
+  .CV #button-CV:hover{
+    background-color: #292e49!important;
+    transition: .3s ease!important;
+  }
+  .CV #button-CV:hover > a{
+    color: #fff!important;
+  font-weight: bold;}
   /************* COMPETENCES *************/
   #gradient {
     background-image: linear-gradient(340deg, #bbd2c5b6, #5369764f, #292e49be);
@@ -220,7 +227,7 @@
     position: relative;
     width: 90%;
     float: right;
-    margin-right: 4rem;
+    margin-right: 3rem;
     border-radius: 0.5rem;
     border: 0.1rem solid #292e49be;
     padding: 1rem 1.5rem;
@@ -229,21 +236,21 @@
   }
   .timeline-panel-container-inverted .timeline-panel {
     float: left;
-    margin-left: 4rem;
+    margin-left: 3rem;
   }
   .timeline-panel::after {
     content: " ";
     display: inline-block;
     position: absolute;
     top: 2.5rem;
-    right: -1.4rem;
+    right: -1.3rem;
     border-top: 1.4rem solid transparent;
     border-left: 1.4rem solid #fff;
     border-right: 0 solid #fff;
     border-bottom: 1.4rem solid transparent;
   }
   .timeline-panel-container-inverted .timeline-panel:after {
-    left: -1.4rem;
+    left: -1.3rem;
     right: auto;
     border-left-width: 0;
     border-right-width: 1.4rem;
@@ -461,8 +468,16 @@
   }
   /***************** RESPONSIVE ******************/
   @media screen and (max-width: 912px){
-    #gradient-4 .container .row .imagePortfolio img{
-      width: 22rem!important;
+  .progressColumn{
+    display: flex;
+    flex-direction: column;
+    }
+    .secondRow{
+      padding-top: 0px;
+      transform: translateY(-15px);
+    }
+  #gradient-4 .container .row .imagePortfolio img{
+    width: 22rem!important;
     height: 10rem;
     }
   }
