--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@
     font-weight: bolder;
     text-shadow: none;
   }
-  .navbar a {
+  .navbar-nav a {
     padding: 0.5rem;
     font-size: 1.3rem;
     text-shadow: -0.2rem -0.2rem 0.5rem rgba(0, 0, 1, 0.479);
@@ -465,6 +465,29 @@
   }
   footer a .fas {
     color: white;
+  }
+  .socialLinks{
+    display: flex;
+    width: 100%;
+    margin-top: 3rem;
+  }
+  .socialLinks ul{
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+  }
+  .socialLinks ul li a{
+    text-decoration: none;
+    color: #dfdfdfab;
+  }
+  .socialLinks ul .fab{
+    font-size: 2.6rem;
+  }
+  footer ul li i:hover {
+    background: var(--btn);
+    border: 0px;
+    box-shadow: 0 0 2px var(--btn), 0 0 4px var(--btn), 0 0 8px var(--btn),
+      0 0 20px var(--btn);
   }
   /***************** RESPONSIVE ******************/
   @media screen and (max-width: 912px){
